--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "viem": "^1.18.4",
+    "wagmi": "^1.4.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -51,7 +53,7 @@
     "terser-webpack-plugin": "^5.3.6",
     "ts-loader": "^9.4.2",
     "type-fest": "^3.5.2",
-    "typescript": "^4.9.4",
+    "typescript": "^5.2.2",
     "webpack": "^5.75.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
