--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "Friend.tech Gems",
-  "description": "Highlight friend.tech gems info on Twitter",
-  "version": "1.3.7",
+  "name": "X_DeFi on Twitter",
+  "description": "Highlight crypto tokens info on Twitter",
+  "version": "1.0.0",
   "permissions": ["storage"],
   "action": {
     "default_popup": "popup.html",
@@ -13,7 +13,11 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://twitter.com/*", "https://x.com/*"],
+      "matches": [
+        "https://twitter.com/*",
+        "https://x.com/*",
+        "https://tweetdeck.twitter.com/*"
+      ],
       "js": ["contentScript.bundle.js"],
       "css": ["content.styles.css"]
     }
