--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "friend-tech-gems",
-  "description": "Highlight friend.tech gems info on Twitter",
-  "version": "1.3.7",
+  "name": "x_defi_twitter",
+  "description": "Highlight crypto tokens info on Twitter",
+  "version": "1.0.0",
   "scripts": {
     "build": "node utils/build.js",
     "build:prod": "NODE_DEPLOY=TRUE node utils/build.js",
     "start": "node utils/webserver.js",
-    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
+    "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'",
+    "serve": "node server/app.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.6",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "^1.18.4",
