Update project name and manifest name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "x_defi_twitter",
+  "name": "trading_xtension",
   "description": "Highlight crypto tokens info on Twitter",
   "version": "1.0.0",
   "scripts": {
