--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "X_DeFi on Twitter",
+  "name": "Trading Xtension",
   "description": "Highlight crypto tokens info on Twitter",
   "version": "1.0.0",
   "permissions": ["storage"],
