--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.14.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "lightweight-charts": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "viem": "^1.18.4",
