--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "serve": "node server/app.js"
   },
   "dependencies": {
+    "@ankr.com/ankr.js": "^0.5.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.6",
