--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 3,
   "name": "Trading Xtension",
   "description": "Highlight crypto tokens info on Twitter",
-  "version": "1.0.0",
-  "permissions": ["storage", "webNavigation"],
+  "version": "1.0.1",
+  "permissions": ["storage", "webNavigation", "tabs"],
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon-48x48.png"
