--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "build:prod": "NODE_DEPLOY=TRUE node utils/build.js",
     "start": "node utils/webserver.js",
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'",
-    "serve": "node server/app.js"
+    "serve": "node server/app.js",
+    "test": "node src/pages/Content/testUni.js"
   },
   "dependencies": {
     "@ankr.com/ankr.js": "^0.5.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.6",
+    "@uniswap/v2-sdk": "^3.2.3",
     "cors": "^2.8.5",
+    "ethers": "^6.9.0",
     "express": "^4.18.2",
     "lightweight-charts": "^4.1.1",
     "react": "^18.2.0",
