--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "start": "node utils/webserver.js",
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'",
     "serve": "node server/app.js",
-    "test": "node src/pages/Content/testUni.js"
+    "test": "node src/pages/Content/TestUni.js"
   },
   "dependencies": {
     "@ankr.com/ankr.js": "^0.5.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.6",
+    "@uniswap/sdk-core": "^4.0.9",
+    "@uniswap/smart-order-router": "^3.19.2",
     "@uniswap/v2-sdk": "^3.2.3",
+    "@uniswap/v3-sdk": "^3.10.0",
     "cors": "^2.8.5",
     "ethers": "^6.9.0",
     "express": "^4.18.2",
+    "jsbi": "^4.3.0",
     "lightweight-charts": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
