--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@uniswap/v2-sdk": "^3.2.3",
     "@uniswap/v3-sdk": "^3.10.0",
     "cors": "^2.8.5",
-    "ethers": "^6.9.0",
+    "ethers": "^5.7.1",
     "express": "^4.18.2",
-    "jsbi": "^4.3.0",
+    "jsbi": "^3.2.5",
     "lightweight-charts": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -55,6 +55,7 @@
     "fs-extra": "^11.1.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.0",
+    "jsdoc": "^4.0.2",
     "prettier": "^2.8.3",
     "react-refresh": "^0.14.0",
     "react-refresh-typescript": "^2.0.7",
