--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.6",
+    "@radix-ui/react-slot": "^1.0.2",
     "@uniswap/sdk-core": "^4.0.9",
     "@uniswap/smart-order-router": "^3.19.2",
     "@uniswap/v2-sdk": "^3.2.3",
     "@uniswap/v3-sdk": "^3.10.0",
+    "class-variance-authority": "^0.7.0",
     "cors": "^2.8.5",
     "ethers": "^5.7.1",
     "express": "^4.18.2",
@@ -26,6 +28,7 @@
     "lightweight-charts": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.1",
     "viem": "^1.18.4",
     "wagmi": "^1.4.5"
   },
