--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@uniswap/sdk-core": "^4.0.9",
     "@uniswap/smart-order-router": "^3.19.2",
@@ -28,6 +30,7 @@
     "lightweight-charts": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind": "^4.0.0",
     "tailwind-merge": "^2.2.1",
     "viem": "^1.18.4",
     "wagmi": "^1.4.5"
