--- a/package.json
+++ b/package.json
@@ -15,11 +15,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.6",
-    "@uniswap/sdk-core": "^4.0.9",
-    "@uniswap/smart-order-router": "^3.19.2",
-    "@uniswap/v2-sdk": "^3.2.3",
-    "@uniswap/v3-sdk": "^3.10.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ethers": "^5.7.1",
     "express": "^4.18.2",
     "jsbi": "^3.2.5",
